--- a/app/globals.css
+++ b/app/globals.css
@@ -96,49 +96,15 @@
     --sidebar-accent-foreground: #e7e3ff;
     --sidebar-border: rgba(108, 92, 231, 0.15);
     --sidebar-ring: rgba(108, 92, 231, 0.6);
-}
 
-/*.dark {
-    --background: oklch(0.145 0 0);
-    --foreground: oklch(0.985 0 0);
-    --card: oklch(0.205 0 0);
-    --card-foreground: oklch(0.985 0 0);
-    --popover: oklch(0.205 0 0);
-    --popover-foreground: oklch(0.985 0 0);
-    --primary: oklch(0.922 0 0);
-    --primary-foreground: oklch(0.205 0 0);
-    --secondary: oklch(0.269 0 0);
-    --secondary-foreground: oklch(0.985 0 0);
-    --muted: oklch(0.269 0 0);
-    --muted-foreground: oklch(0.708 0 0);
-    --accent: oklch(0.269 0 0);
-    --accent-foreground: oklch(0.985 0 0);
-    --destructive: oklch(0.704 0.191 22.216);
-    --border: oklch(1 0 0 / 10%);
-    --input: oklch(1 0 0 / 15%);
-    --ring: oklch(0.556 0 0);
-    --chart-1: oklch(0.488 0.243 264.376);
-    --chart-2: oklch(0.696 0.17 162.48);
-    --chart-3: oklch(0.769 0.188 70.08);
-    --chart-4: oklch(0.627 0.265 303.9);
-    --chart-5: oklch(0.645 0.246 16.439);
-    --sidebar: oklch(0.205 0 0);
-    --sidebar-foreground: oklch(0.985 0 0);
-    --sidebar-primary: oklch(0.488 0.243 264.376);
-    --sidebar-primary-foreground: oklch(0.985 0 0);
-    --sidebar-accent: oklch(0.269 0 0);
-    --sidebar-accent-foreground: oklch(0.985 0 0);
-    --sidebar-border: oklch(1 0 0 / 10%);
-    --sidebar-ring: oklch(0.556 0 0);
-}*/
+    --scrollbar: #101114;
+    --scrollbar-thumb: #333;
+}
 
 @layer base {
     html {
         font-size: var(--font-size);
         overflow-x: hidden;
-    }
-    .bg-default {
-        background-image: url("/img/default.png");
     }
 
     .no-scrollbar {
@@ -148,6 +114,27 @@
 
     .no-scrollbar::-webkit-scrollbar {
         display: none; /* Chrome, Safari*/
+    }
+    /* Vertical scrollbar arrows */
+    .scrollbar::-webkit-scrollbar-button {
+        display: none;
+        width: 0;
+        height: 0;
+    }
+
+    /* Chromium + Safari */
+    .scrollbar::-webkit-scrollbar {
+        width: 6px; /* ← reduce width here */
+        height: 6px; /* for horizontal scroll */
+    }
+
+    .scrollbar::-webkit-scrollbar-thumb {
+        background-color: var(--scrollbar-thumb);
+        border-radius: 999px;
+    }
+
+    .scrollbar::-webkit-scrollbar-track {
+        background-color: var(--scrollbar);
     }
 
     body {
